marge bot basics